--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container box_1620">
 
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+						<a class="navbar-brand logo_h" href="index.html"><img style="max-width: 175px" src="img/logo.png" alt=""></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -69,14 +69,14 @@
 						<div class="col-lg-5">
 							<div class="banner_content">
 								<h2>Find answers in your data. Visually.</h2>
-								<p>visually find the path to the answers in your data.</p>
-								<a class="banner_btn" href="#">Get Started</a>
-								<a class="banner_btn2" href="#">Download</a>
+								<p></p>
+								<a class="banner_btn" href="#">Learn More</a>
+								<!-- <a class="banner_btn2" href="#">Download</a> -->
 							</div>
 						</div>
 						<div class="col-lg-7">
 							<div class="home_left_img">
-								<img class="img-fluid" src="img/home-left-1.png" alt="">
+								<img class="img-fluid" src="img/screen.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -84,12 +84,21 @@
             </div>
         </section>
 
+        <!--
         <section class="work_area p_120">
         	<div class="container">
         		<div class="main_title">
-        			<h2>How It work for you</h2>
-        			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+        			<h2>What is VizPath?</h2>
+        			<div style="max-width:800px; margin: 0 auto;">
+        			<h4 style="line-height: 30px;">
+        				VizPath is an online analytic solution that allows you to
+        				gain insights into your data visually leveraging various types
+        				of data visualizations as your guide.<br>
+						Opening the path to data-driven decisions.
+        			</h4>
         		</div>
+        		</div>
+
         		<div class="work_inner row">
         			<div class="col-lg-4">
         				<div class="work_item">
@@ -113,13 +122,24 @@
         				</div>
         			</div>
         		</div>
+
         	</div>
         </section>
-        <!--================End Work Area =================-->
+        -->
 
-        <!--================Made Life Area =================-->
         <section class="made_life_area p_120">
         	<div class="container">
+        				<div class="main_title">
+        			<h2>What is VizPath?</h2>
+        			<div style="max-width:800px; margin: 0 auto;">
+        			<h4 style="line-height: 30px;">
+        				VizPath is an online analytic solution that allows you to
+        				gain insights into your data visually leveraging various types
+        				of data visualizations as your guide.<br>
+						Opening the path to data-driven decisions.
+        			</h4>
+        		</div>
+        		</div>
         		<div class="made_life_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
@@ -217,7 +237,7 @@
         			<h2>Unique Screens that work perfectly</h2>
         			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
         		</div>
-        		<img class="img-fluid" src="img/home-left-1.png" alt="">
+        		<img class="img-fluid" src="img/screen.png" alt="">
         	</div>
         </section>
         <!--================End Screen Area =================-->
@@ -456,7 +476,7 @@
 					<div class="row made_life_text">
 						<div class="col-lg-6">
 							<div class="chart_img">
-								<img class="img-fluid" src="img/home-left-1.png" alt="">
+								<img class="img-fluid" src="img/screen.png" alt="">
 							</div>
 						</div>
 						<div class="col-lg-6">
