--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>VizPath</title>
+        <title>VizPath - Visual Insights Platform</title>
+        <meta name="Keywords" content="visualization,data,design,data-driven,spreadsheet,csv,interface,vector,SVG,PNG">
+        <meta name="Description" content="VizPath, the visual insights platform.">
+        <meta name="author" content="West Beta Software">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/linearicons@1.0.1/dist/web-font/style.min.css">
@@ -34,9 +37,9 @@
 
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav justify-content-center">
-								<li class="nav-item"><a class="nav-link" href="about-us.html">What is it?</a></li>
-								<li class="nav-item"><a class="nav-link" href="about-us.html">Features</a></li>
-								<li class="nav-item submenu dropdown">
+								<li class="nav-item"><a class="nav-link" href="#features">What is it?</a></li>
+                <li class="nav-item"><a class="nav-link" href="#signup">Try it free</a></li>
+								<!-- <li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pricing</a>
 									<ul class="dropdown-menu">
 										<li class="nav-item"><a class="nav-link" href="price.html">Single User</a>
@@ -44,12 +47,12 @@
 										<li class="nav-item"><a class="nav-link" href="elements.html">Enterprise</a></li>
 										<li class="nav-item"><a class="nav-link" href="elements.html">White Label</a></li>
 									</ul>
-								</li>
-								<li class="nav-item"><a class="nav-link" href="services.html">Services</a>
-								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+								</li> -->
+								<li class="nav-item"><a class="nav-link" href="#contact">Support</a>
+								<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
-								<li class="nav-item"><a href="#" class="tickets_btn">Signup for Beta</a></li>
+								<li class="nav-item"><a href="https://app.vizpath.com/login" class="tickets_btn">Login</a></li>
 							</ul>
 						</div>
 					</div>
@@ -65,7 +68,7 @@
 							<div class="banner_content">
 								<h2>Find answers in your data. Visually.</h2>
 								<p></p>
-								<a class="banner_btn" href="#">Learn More</a>
+								<!-- <a class="banner_btn" href="#">Learn More</a> -->
 								<!-- <a class="banner_btn2" href="#">Download</a> -->
 							</div>
 						</div>
@@ -79,75 +82,14 @@
             </div>
         </section>
 
-        <!--
-        The missing link between spreadsheets and vector graphics
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="Keywords" content="RAW,visualization,data,design,spreadsheet,interface,vector graphics,SVG,PNG,JSON">
-  <meta name="Description" content="RAW, missing link between spreadsheets and data visualization, by DensityDesign and Calibro, Giorgio Caviglia, Matteo Azzi, Michele Mauri, Giorgio Uboldi, Tommaso Elli">
-  <meta name="author" content="DensityDesign Research Lab and Studio Calibro">
-  Social Networks meta tags 
-  <meta property="og:title" content="RAWGraphs">
-  <meta property="og:description" content="The missing link between spreadsheets and data visualization.">
-  <meta property="og:image" content="http://app.rawgraphs.io/imgs/cover-for-socials.jpg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:url" content="http://app.rawgraphs.io/">
-  <meta property="og:type" content="article">
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@rawgraphs">
-
-  
-        <section class="work_area p_120">
-        	<div class="container">
-        		<div class="main_title">
-        			<h2>What is VizPath?</h2>
-        			<div style="max-width:800px; margin: 0 auto;">
-        			<h4 style="line-height: 30px;">
-        				VizPath is an online analytic solution that allows you to
-        				gain insights into your data visually leveraging various types
-        				of data visualizations as your guide.<br>
-						Opening the path to data-driven decisions.
-        			</h4>
-        		</div>
-        		</div>
-
-        		<div class="work_inner row">
-        			<div class="col-lg-4">
-        				<div class="work_item">
-        					<i class="lnr lnr-screen"></i>
-        					<a href="#"><h4>Stunning Visuals</h4></a>
-        					<p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola.</p>
-        				</div>
-        			</div>
-        			<div class="col-lg-4">
-        				<div class="work_item">
-        					<i class="lnr lnr-code"></i>
-        					<a href="#"><h4>Stunning Visuals</h4></a>
-        					<p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola.</p>
-        				</div>
-        			</div>
-        			<div class="col-lg-4">
-        				<div class="work_item">
-        					<i class="lnr lnr-clock"></i>
-        					<a href="#"><h4>Stunning Visuals</h4></a>
-        					<p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola.</p>
-        				</div>
-        			</div>
-        		</div>
-
-        	</div>
-        </section>
-        -->
-
-        <section class="made_life_area p_120">
+        <section class="made_life_area p_120" id="features">
         	<div class="container">
         				<div class="main_title">
         			<h2>What is VizPath?</h2>
         			<div style="max-width:800px; margin: 0 auto;">
         			<h4 style="line-height: 30px;">
-                VizPath is an online analytic solution that allows you to<br>
-                gain insights into your data visually leveraging various types <br>
+                VizPath is an online analysis solution that allows you to<br>
+                gain insights into your data visually leveraging various types<br>
         				of data visualizations as your guide.<br>
         			</h4>
         		</div>
@@ -155,36 +97,43 @@
         		<div class="made_life_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
-						<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Visual Analytics</a>
+						<a class="nav-link active" id="step-1" data-toggle="tab" href="#step1" role="tab" aria-controls="step1" aria-selected="true">Load Your Data</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Custom Dashboards</a>
+						<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Choose a Visualization</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Any Data</a>
+						<a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Explore & Tune</a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link" id="edge-tab" data-toggle="tab" href="#edge" role="tab" aria-controls="edge" aria-selected="false">Teams & Sharing</a>
+						<a class="nav-link" id="edge-tab" data-toggle="tab" href="#edge" role="tab" aria-controls="edge" aria-selected="false">Export</a>
 						</li>
 					</ul>
 					<div class="tab-content" id="myTabContent">
-						<div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+						<div class="tab-pane fade show active" id="step1" role="tabpanel" aria-labelledby="step-1">
 							<div class="row made_life_text">
 								<div class="col-lg-6">
 									<div class="left_side_text">
-										<h3>Visual Analytics</h3>
-										<h6>Explore and analyze your data visually.</h6>
+										<h3>1. First, insert your data</h3>
+										<h6><i class="fa fa-copy"></i> As simple as a copy-paste.</h6>
                     <p>
-                      Using the latest trends and technologies in data visualization, VizPath
-                      allows you to dive deeper into your data to gain insights in ways not possible using traditional
-                      spreadsheets.
+                      VizPath works with delimiter-separated values (like .csv and .xlsx files) 
+                      as well as with copied-and-pasted content from other applications 
+                      (like Microsoft Excel, Google Spreadsheets, etc). 
                     </p>
-                    <!--<a class="main_btn" href="#">Get Started Now</a>-->
+                    <br>
+                    <h6><i class="fa fa-lock"></i> Don't worry, your data is safe.</h6>
+                    <p>
+                      VizPath is a web app but the data you load 
+                      will be processed only by the web browser.                     
+                      No server-side operations or storages are performed, 
+                      no one will see, touch or copy your data!
+                    </p>
 									</div>
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<img class="img-fluid" src="img/analysis2.png" alt="">
+										<img class="img-fluid img-shadow" src="img/step-1.gif" alt="">
 									</div>
 								</div>
 							</div>
@@ -193,18 +142,18 @@
 							<div class="row made_life_text">
 								<div class="col-lg-6">
 									<div class="left_side_text">
-										<h3>Custom Dashboards</h3>
-										<h6>Configure and save your custom dashboards</h6>
+										<h3>2. Choose a visualization</h3>
+										<h6><i class="fa fa-chart"></i> Scatter plots, box plots, and more.</h6>
 										<p>
-                      VizPath gives you the power to save any number of custom dashboards and configurations so you that you
-                      can quickly and easily jump back into your exploration later. Save layouts, configurations and filters
-                      so that you can clearly tell your story.
+                      Select from a variety of data visualizations both conventional and unconventional
+                      including scatter plot, box plot, dendogram, hexagonal binning, and more.
+                      Don’t worry, you can still use bar charts and pies charts too!
                     </p>
 									</div>
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<img class="img-fluid" src="img/analysis1.png" alt="">
+										<img class="img-fluid img-shadow" src="img/step-2.gif" alt="">
 									</div>
 								</div>
 							</div>
@@ -213,18 +162,24 @@
 							<div class="row made_life_text">
 								<div class="col-lg-6">
 									<div class="left_side_text">
-										<h3>Any Data</h3>
-                    <h6>Use any data you want. From spreadsheets to databases.</h6>
+										<h3>3. Explore your data</h3>
+                    <h6><i class="fa fa-tune"></i> Find insights and tune your chart</h6>
 										<p>
-                      VizPath is flexible so it can handle any type of structured data you throw at it. We are continuously working on
-                      improving our data connectors to popular services and databases. Let us work with you to get VizPath linked to
-                      your system.
+                      Explore hidden patterns and trends by visually representing your data.
+                      Just select the columns in your dataset. 
+                    </p>
+                    <h6><i class="fa fa-eye"></i> Instant visual feedback</h6>
+                    <p>
+                      As soon as your columns are mapped you’ll see the visualization 
+                      appear. Not happy with the result? Keep exploring by changing 
+                      your selected column mappings and the visualization will update
+                      instantly.
                     </p>
 									</div>
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<img class="img-fluid" style="max-width: 200px; margin: 0 auto;display:block;" src="https://image.flaticon.com/icons/svg/148/148824.svg" alt="">
+										<img class="img-fluid img-shadow" src="img/step-3.gif" alt="">
 									</div>
 								</div>
 							</div>
@@ -233,17 +188,18 @@
 							<div class="row made_life_text">
 								<div class="col-lg-6">
 									<div class="left_side_text">
-										<h3>Teams & Sharing</h3>
-										<h6>Share your projects, data and custom dashboards with anyone</h6>
+										<h3>4. Export your visualization</h3>
+										<h6><i class="fa fa-export"></i> Generate & export visuals</h6>
 										<p>
-                      VizPath allows you to share your custom dashboards and findings with other users so that you can collaborate in real-time
-                      to gain insights.
+                      VizPath enables you to export visualizations as vector (.svg) or 
+                      raster (.png) images to use in websites, documents, powerpoints or wherever want to
+                      insert your visual.
                     </p>
 									</div>
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<img class="img-fluid" src="img/overview.png" alt="">
+										<img class="img-fluid img-shadow" src="img/step-4.gif" alt="">
 									</div>
 								</div>
 							</div>
@@ -252,25 +208,8 @@
         		</div>
         	</div>
         </section>
-        <!--================End Made Life Area =================-->
 
-        <!--================Screen Area =================-->
-        <section class="screen_area text-center p_120">
-        	<div class="container">
-        		<div class="main_title">
-        			<h2>Cloud friendly & scalable</h2>
-        			<h4 style="line-height:30px">
-                Got big data problems? No problem. <br>
-                Since VizPath is cloud native,
-                you can load in any size data you want.
-              </h4>
-        		</div>
-            <img class="img-fluid" style="max-width:150px" src="https://image.flaticon.com/icons/svg/1509/1509358.svg" alt="">
-        	</div>
-        </section>
-        <!--================End Screen Area =================-->
-
-        <!--================Made Life Area =================-->
+<!--
         <section class="made_life_area p_120">
         	<div class="container">
         		<div class="made_life_inner">
@@ -296,6 +235,7 @@
         		</div>
         	</div>
         </section>
+
 
         <section class="price_area p_120">
         	<div class="container">
@@ -363,6 +303,7 @@
         		</div>
         	</div>
         </section>
+      -->
 
         <!--
         <section class="testimonials_area p_120">
@@ -497,23 +438,24 @@
         </section>
         -->
 
-        <section class="made_life_area made_white p_120">
+        <section class="made_life_area made_white p_120" id="signup">
         	<div class="container">
         		<div class="made_life_inner">
 					<div class="row made_life_text">
 						<div class="col-lg-6">
 							<div class="chart_img">
-								<img class="img-fluid" src="img/screen.png" alt="">
+								<img class="img-fluid img-shadow" style="max-width: 500px;" src="img/screen.png" alt="">
 							</div>
 						</div>
 						<div class="col-lg-6">
 							<div class="left_side_text">
                 <h3>Follow the path to <br>data-driven decisions.</h3>
-                <!--<h6>We are here to listen from you deliver exellence</h6>-->
+                <!--<h6></h6>-->
                 <p>
-                To learn more about VizPath, reach out to us to request a <br>free demo so you can see what is hidden in your data.
+                Try VizPath for free today so you can see what is hidden <br>in your data.
+                No credit card required.
                 </p>
-								<a class="main_btn" href="#">Request Free Demo</a>
+								<a class="main_btn" href="https://app.vizpath.com/login" style="font-size:20px;">Sign Up Free</a>
 							</div>
 						</div>
 					</div>
@@ -535,61 +477,24 @@
         </section>
         -->
 
-        <footer class="footer_area p_120">
+        <footer class="footer_area p_120" id="contact">
         	<div class="container">
         		<div class="row footer_inner">
         			<div class="col-lg-5 col-sm-6">
         				<aside class="f_widget ab_widget">
         					<div class="f_title">
                     <img src="img/logo.png" style="max-width: 200px"/>
-                    <!--<h3>About Me</h3>-->
         					</div>
         					<p></p>
                   Copyright &copy;<script type="text/javascript">document.write(new Date().getFullYear());</script> All rights reserved <br>
-                  Located in Boulder, CO <i class="fa fa-heart-o" aria-hidden="true"></i>
+                  Located in Boulder, CO <i class="fa fa-heart-o" aria-hidden="true"></i><br>
+                  Support: <a href="mailto:support@vizpath.com">support@vizpath.com</a>
 </p>
         				</aside>
         			</div>
-              <!--
-        			<div class="col-lg-5 col-sm-6">
-        				<aside class="f_widget news_widget">
-        					<div class="f_title">
-        						<h3>Newsletter</h3>
-        					</div>
-        					<p>Stay updated with our latest trends</p>
-        					<div id="mc_embed_signup">
-                                <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative">
-                                	<div class="input-group d-flex flex-row">
-                                        <input name="EMAIL" placeholder="Enter email address" onfocus="if (!window.__cfRLUnblockHandlers) return false; this.placeholder = ''" onblur="if (!window.__cfRLUnblockHandlers) return false; this.placeholder = 'Email Address '" required="" type="email" data-cf-modified-678fe18b69c3b32a584d7d24-="">
-                                        <button class="btn sub-btn"><span class="lnr lnr-arrow-right"></span></button>
-                                    </div>
-                                    <div class="mt-10 info"></div>
-                                </form>
-                            </div>
-        				</aside>
-        			</div>
-        			<div class="col-lg-2">
-        				<aside class="f_widget social_widget">
-        					<div class="f_title">
-        						<h3>Follow Me</h3>
-        					</div>
-        					<p>Let us be social</p>
-        					<ul class="list">
-        						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        						<li><a href="#"><i class="fa fa-behance"></i></a></li>
-        					</ul>
-        				</aside>
-        			</div>
-              -->
         		</div>
         	</div>
         </footer>
-
-
-
-
 
         <script
               src="https://code.jquery.com/jquery-3.3.1.min.js"
