fix login links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="responsive.css">
     </head>
     <body>
- 
+
         <header class="header_area">
             <div class="main_menu">
             	<nav class="navbar navbar-expand-lg navbar-light">
@@ -51,7 +51,7 @@
 								<li class="nav-item"><a class="nav-link" href="#support">Contact</a></li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
-								<li class="nav-item"><a href="https://app.vizpath.com/login" class="tickets_btn">Login</a></li>
+								<li class="nav-item"><a href="https://app.vizpath.com/login.html" class="tickets_btn">Login</a></li>
 							</ul>
 						</div>
 					</div>
@@ -122,15 +122,15 @@
 										<h4 class="details-subtitle"><i class="fa fa-copy details-icon"></i> As simple as copy-paste</h4>
                     <p>
                       VizPath works with delimiter-separated values <i>(like .csv and .xlsx files)</i>
-                      as well as copied-pasted content from other applications 
+                      as well as copied-pasted content from other applications
                       <i>(like Microsoft Excel, Google Spreadsheets, etc).</i>
                     </p>
                     <br>
                     <h4 class="details-subtitle"><i class="fa fa-lock details-icon"></i> Don't worry, your data is safe</h4>
                     <p>
-                      Although VizPath is a web applicaton, the data you load 
-                      will only be processed by the web browser.                     
-                      No server-side operations or storages are performed, 
+                      Although VizPath is a web applicaton, the data you load
+                      will only be processed by the web browser.
+                      No server-side operations or storages are performed,
                       <i>so no one will see, touch or copy your data!</i>
                     </p>
 									</div>
@@ -149,7 +149,7 @@
 										<h3>2. Pick a visualization</h3>
 										<h4 class="details-subtitle"><i class="fa fa-area-chart details-icon"></i> Scatter plots, box plots, and more</h4>
 										<p>
-                      Select from a variety of both conventional and unconventional data visualizations 
+                      Select from a variety of both conventional and unconventional data visualizations
                       including scatter plots, box plots, dendograms, hexagonal binning charts, and more.
                       Also don’t worry, you can still use bar charts and pies charts too!
                     </p>
@@ -171,13 +171,13 @@
 										<p>
                       Explore hidden patterns and trends by visually representing your data.
                       Just drag-and-drop the columns in your dataset to discover new ways of
-                      looking at your data. 
+                      looking at your data.
                     </p>
                     <br>
                     <h4 class="details-subtitle"><i class="fa fa-eye details-icon"></i> Instant visual feedback</h4>
                     <p>
-                      As soon as your columns are mapped, you’ll see the visualization 
-                      appear. Not happy with the result? Keep exploring by changing 
+                      As soon as your columns are mapped, you’ll see the visualization
+                      appear. Not happy with the result? Keep exploring by changing
                       your selected column mappings and the visualization will update
                       instantly.
                     </p>
@@ -197,7 +197,7 @@
 										<h3>4. Export your visualization</h3>
 										<h4 class="details-subtitle"><i class="fa fa-export"></i> Generate & export visuals</h4>
 										<p>
-                      VizPath enables you to export visualizations as vector (.svg) or 
+                      VizPath enables you to export visualizations as vector (.svg) or
                       raster (.png) images to use in websites, documents, powerpoints or wherever want to
                       insert your visual.
                     </p>
@@ -231,7 +231,7 @@
                   VizPath is currently in Beta.<br>
                 Try it free today to see what is hidden in your data.
                 </p>
-								<a class="main_btn" href="https://app.vizpath.com/login" style="font-size:20px;">Sign Up Free</a>
+								<a class="main_btn" href="https://app.vizpath.com/login.html" style="font-size:20px;">Sign Up Free</a>
 							</div>
 						</div>
 					</div>
