--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 										<p>
                       Explore hidden patterns and trends by visually representing your data.
                       Just drag-and-drop the columns in your dataset to discover new ways of
-                      looking at your data.
+                      looking at your analysis.
                     </p>
                     <br>
                     <h4 class="details-subtitle"><i class="fa fa-eye details-icon"></i> Instant visual feedback</h4>
@@ -197,8 +197,8 @@
 										<h3>4. Export your visualization</h3>
 										<h4 class="details-subtitle"><i class="fa fa-export"></i> Generate & export visuals</h4>
 										<p>
-                      VizPath enables you to export visualizations as vector (.svg) or
-                      raster (.png) images to use in websites, documents, powerpoints or wherever want to
+                      VizPath enables you to customize and export visualizations as vector (.svg) or
+                      raster (.png) images for use in websites, documents, powerpoints...or wherever want to
                       insert your visual.
                     </p>
 									</div>
@@ -229,7 +229,7 @@
                 <h3>Follow the path to <br>data-driven decisions.</h3>
                 <p>
                   VizPath is currently in Beta.<br>
-                Try it free today to see what is hidden in your data.
+                Try it free today and see what is hidden in your data.
                 </p>
 								<a class="main_btn" href="https://app.vizpath.com/login.html" style="font-size:20px;">Sign Up Free</a>
 							</div>
@@ -258,6 +258,15 @@
         	</div>
         </footer>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140415806-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-140415806-1');
+        </script>
         <script
               src="https://code.jquery.com/jquery-3.3.1.min.js"
               integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
