fix responsive image

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					<div class="row made_life_text">
 						<div class="col-lg-6">
 							<div class="chart_img">
-								<img class="img-fluid" style="max-width: 500px;" src="img/tablet-shadow.png" alt="">
+								<img class="img-fluid" style="width:100%; max-width: 500px;" src="img/tablet-shadow.png" alt="">
 							</div>
 						</div>
 						<div class="col-lg-6">
