--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <meta name="Description" content="VizPath, the visual insights platform.">
         <meta name="author" content="West Beta Software">
 
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+        <link rel="manifest" href="/img/icons/site.webmanifest">
+        <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="/img/icons/favicon.ico">
+        <meta name="msapplication-TileColor" content="#f2f2f2">
+        <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
+        <meta name="theme-color" content="#f2f2f2">
+        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/linearicons@1.0.1/dist/web-font/style.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
