--- a/index.html
+++ b/index.html
@@ -225,6 +225,64 @@
         	</div>
         </section>
 
+        <section class="home_banner_area">
+          <div class="container" style="padding: 2rem 0 3rem 0">
+            <h2 style="text-align: center;color:#fff;padding:2rem 0;">
+              Tons of visualizations to choose from
+            </h2>
+            <div class="row">
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Conour Plot</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/contourplot.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Beeswarm Plot</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/beeswarm.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Alluvial Diagram</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/alluvial.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Hexagonal Binning</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/binning.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Cluster Dendrogram</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/dendrogram.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Circular Dendrogram</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/circularDendrogram.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Convex Hull</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/multipleConvexHull.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Sunburst</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/sunburst.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Bump Chart</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/bumpChart.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Scatter Plot</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/scatterPlot.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Treemap</p>
+                <img class="img-fluid" src="https://app.vizpath.com/imgs/treemap.png"/>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                <p class="chart-name">Many more</p>
+                <img class="img-fluid" style="-webkit-filter: blur(4px);filter: blur(4px);" src="https://app.vizpath.com/imgs/barChart.png"/>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="made_life_area made_white p_120" id="signup">
         	<div class="container">
         		<div class="made_life_inner">
@@ -260,7 +318,11 @@
         					<p></p>
                   Copyright &copy;<script type="text/javascript">document.write(new Date().getFullYear());</script> All rights reserved <br>
                   Located in Boulder, CO <i class="fa fa-heart-o" aria-hidden="true"></i><br>
-                  Support: <a href="mailto:support@vizpath.com">support@vizpath.com</a>
+                  Support: <a href="mailto:support@vizpath.com">support@vizpath.com</a><br>
+                  <div class="terms">
+                    <a href="https://westbeta.com/terms/" target="_blank">Privacy Policy</a> | 
+                    <a href="https://westbeta.com/terms/" target="_blank">Terms of Service
+                  </div>
                   </p>
         				</aside>
         			</div>
